--- a/config.jsonc
+++ b/config.jsonc
@@ -35,7 +35,7 @@
     },
 
     "backlight": {
-      "format": "bgt {percent}%",
+      "format": "brt {percent}%",
     },
 
     "tray": {
@@ -44,8 +44,9 @@
     },
 
     "clock": {
-        "format": "{:%I:%M %p - %a, %d %b}",
-        "tooltip": false
+        "format": "{:%H:%M - %a, %d %b}", 
+        "tooltip": false,
+        "tooltip-format": "<big>{:%A, %d %B %Y}</big>\n<tt><small>{calendar}</small></tt>"
     },
 
     "cpu": {
@@ -78,7 +79,7 @@
 
     "network": {
         "format-wifi" : "wifi {bandwidthDownBits}",
-        "format-ethernet": "enth {bandwidthDownBits}",
+        "format-ethernet": "eth {bandwidthDownBits}",
         "format-disconnected" : "no network",
         "interval": 5,
         "tooltip": false
