added a bluetooth module and added on-click for both wifi and bluetooth

--- a/config.jsonc
+++ b/config.jsonc
@@ -22,6 +22,7 @@
         "memory",
         "battery",
         "network",
+        "bluetooth",
         "backlight",
         "pulseaudio"
     ],
@@ -78,11 +79,13 @@
     },
 
     "network": {
-        "format-wifi" : "wifi {bandwidthDownBits}",
-        "format-ethernet": "eth {bandwidthDownBits}",
-        "format-disconnected" : "no network",
+        "format-wifi": "󰖩   {bandwidthDownBits}", 
+        "format-ethernet": "󰈀   {bandwidthDownBits}",
+        "format-disconnected": "󰖪 Disconnected", 
         "interval": 5,
-        "tooltip": false
+        "tooltip-format": "{ifname} via {gwaddr}",
+        "tooltip-format-wifi": "  {essid} ({signalStrength}%) ",
+        "on-click": "nm-connection-editor" 
     },
 
     "pulseaudio": {
@@ -92,5 +95,17 @@
         "format-bluetooth": "vol {volume}%",
         "nospacing": 1,
         "tooltip": false
+    },
+
+    "bluetooth": {
+        "format": "󰂯 {status}", 
+        "format-disabled": "󰂲 Off",
+        "format-connected": "󰂯  {device_alias}", 
+        "format-connected-battery": "󰂯 {device_alias} : {device_battery_percentage}%",
+        "tooltip-format": "{controller_alias}\t{controller_address}",
+        "tooltip-format-connected": "{device_alias}\t{device_address}",
+        "tooltip-format-enumerate-connected-devices": true,
+        "on-click": "blueman-manager",
+        "on-click-middle": "rfkill toggle bluetooth" 
     }
 }
