--- a/config.jsonc
+++ b/config.jsonc
@@ -1,121 +1,104 @@
 {
-    "layer": "top",
-    "position": "bottom",
-    "spacing": 0,
-    "height": 0,
-    "margin-top": 0,
-    "margin-right": 0,
-    "margin-bottom": 0,
-    "margin-left": 0,
-
-    "modules-left": [
-        "hyprland/workspaces"
-    ],
-
-    "modules-center": [
-        "clock"
-    ],
-
-    "modules-right": [
-        "tray",
-        "cpu_text",
-        "cpu",
-        "memory",
-        "battery",
-        "network",
-        "bluetooth",
-        "backlight",
-        "pulseaudio"
-    ],
-
-    "hyprland/workspaces": {
-        "format": "{name}",
-        "all-outputs": true,
-        "tooltip": true,
-        "tooltip-format": "{name}",
-        "on-click": "activate"
-    },
-
-    "backlight": {
-      "format": "&#xf185;   {percent}%",
-    },
-
-    "tray": {
-        "spacing": 10,
-        "tooltip": false
-    },
-
-    "clock": {
-        "format": "{:%H:%M - %a, %d %b}", 
-        "tooltip": true,
-        "tooltip-format": "<big>{:%A, %d %B %Y}</big>\n<tt><small>{calendar}</small></tt>"
-    },
-
-    "cpu": {
-        "format": "&#xf2db;    {usage}%",
-        "interval": 3,
-
-        "states": {
-            "critical": 90
-        }
-    },
-
-    "memory": {
-        "format": "&#xf080;   {percentage}%",
-        "interval": 3,
-
-        "states": {
-            "critical": 80
-        }
-    },
-
-    "battery": {
-      "interval": 15,
-      "states": {
-        "warning": 20,
-        "critical": 10
-      },
-      "format": "{icon}   {capacity}%",
-      "format-icons": [
-        "",  // 0-24%   (fa-battery-empty, Unicode: f244)
-        "",  // 25-49%  (fa-battery-quarter, Unicode: f243)
-        "",  // 50-74%  (fa-battery-half, Unicode: f242)
-        "",  // 75-94%  (fa-battery-three-quarters, Unicode: f241)
-        ""   // 95-100% (fa-battery-full, Unicode: f240)
-      ],
-      "tooltip": false
-    },
-
-
-    "network": {
-        "format-wifi": "󰖩   {bandwidthDownBits}", 
-        "format-ethernet": "󰈀   {bandwidthDownBits}",
-        "format-disconnected": "󰖪 Disconnected", 
-        "interval": 5,
-        "tooltip-format": "{ifname} via {gwaddr}",
-        "tooltip-format-wifi": "  {essid} ({signalStrength}%) ",
-        "on-click": "nm-applet --indicator" 
-    },
-
-    "pulseaudio": {
-        "scroll-step": 5,
-        "max-volume": 150,
-        "format": "&#xf028;   {volume}%",
-        "format-bluetooth": "&#xf028;   {volume}%",
-        "nospacing": 1,
-        "tooltip": false,
-        "on-click": "pavucontrol"
-    },
-
-    "bluetooth": {
-        "format": "󰂯 {status}", 
-        "format-disabled": "󰂲 Off",
-        "format-connected": "󰂯  {device_alias}", 
-        "format-connected-battery": "󰂯 {device_alias} : {device_battery_percentage}%",
-        "tooltip-format": "{controller_alias}\t{controller_address}",
-        "tooltip-format-connected": "{device_alias}\t{device_address}",
-        "tooltip-format-enumerate-connected-devices": true,
-        "on-click": "blueman-manager",
-        "on-click-middle": "rfkill toggle bluetooth" 
+  "layer": "top",
+  "position": "bottom",
+  "spacing": 0,
+  "height": 0,
+  "margin-top": 0,
+  "margin-right": 0,
+  "margin-bottom": 0,
+  "margin-left": 0,
+  "modules-left": ["hyprland/workspaces"],
+  "modules-center": ["clock"],
+  "modules-right": [
+    "tray",
+    "cpu_text",
+    "cpu",
+    "memory",
+    "battery",
+    "network",
+    "bluetooth",
+    "backlight",
+    "custom/kbd_backlight",
+    "pulseaudio"
+  ],
+  "hyprland/workspaces": {
+    "format": "{name}",
+    "all-outputs": true,
+    "tooltip": true,
+    "tooltip-format": "{name}",
+    "on-click": "activate"
+  },
+  "backlight": {
+    "format": "&#xf185;   {percent}%"
+  },
+  "tray": {
+    "spacing": 10,
+    "tooltip": false
+  },
+  "clock": {
+    "format": "{:%H:%M - %a, %d %b}",
+    "tooltip": true,
+    "tooltip-format": "<big>{:%A, %d %B %Y}</big>\n<tt><small>{calendar}</small></tt>"
+  },
+  "cpu": {
+    "format": "&#xf2db;    {usage}%",
+    "interval": 3,
+    "states": {
+      "critical": 90
     }
+  },
+  "memory": {
+    "format": "&#xf080;   {percentage}%",
+    "interval": 3,
+    "states": {
+      "critical": 80
+    }
+  },
+  "battery": {
+    "interval": 15,
+    "states": {
+      "warning": 20,
+      "critical": 10
+    },
+    "format": "{icon}   {capacity}%",
+    "format-icons": ["", "", "", "", ""],
+    "tooltip": false
+  },
+  "network": {
+    "format-wifi": "󰖩   {bandwidthDownBits}",
+    "format-ethernet": "󰈀   {bandwidthDownBits}",
+    "format-disconnected": "󰖪 Disconnected",
+    "interval": 5,
+    "tooltip-format": "{ifname} via {gwaddr}",
+    "tooltip-format-wifi": "  {essid} ({signalStrength}%) ",
+    "on-click": "nm-applet --indicator"
+  },
+  "pulseaudio": {
+    "scroll-step": 5,
+    "max-volume": 150,
+    "format": "&#xf028;   {volume}%",
+    "format-bluetooth": "&#xf028;   {volume}%",
+    "nospacing": 1,
+    "tooltip": false,
+    "on-click": "pavucontrol"
+  },
+  "bluetooth": {
+    "format": "󰂯 {status}",
+    "format-disabled": "󰂲 Off",
+    "format-connected": "󰂯  {device_alias}",
+    "format-connected-battery": "󰂯 {device_alias} : {device_battery_percentage}%",
+    "tooltip-format": "{controller_alias}\t{controller_address}",
+    "tooltip-format-connected": "{device_alias}\t{device_address}",
+    "tooltip-format-enumerate-connected-devices": true,
+    "on-click": "blueman-manager",
+    "on-click-middle": "rfkill toggle bluetooth"
+  },
+  "custom/kbd_backlight": {
+    "format": "󰌌   {}",
+    "exec": "mode=$(asusctl -k | grep -i 'keyboard led brightness' | awk '{print tolower($NF)}'); case \"$mode\" in off) echo 0% ;; low) echo 33% ;; med) echo 66% ;; high) echo 100% ;; esac",
+    "on-click": "asusctl -n",
+    "interval": 5,
+    "tooltip": true,
+    "tooltip-format": "Keyboard Brightness: {}"
+  }
 }
